General refactoring. Renamed vars to proper java naming conventions, extracted static functions to utils classes.
git-svn-id: svn://localhost/tmp/MinecraftBiomeExtractor/trunk@15 deea66d2-7353-4fda-b7a8-2b4dc9b1af74